Corrected some small typos

--- a/tutorials/arhmm_intro.ipynb
+++ b/tutorials/arhmm_intro.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Though HMMs are powerful probabilistic models, they are actually relatively constrained examples of more general graphical models like Bayesian networks or Markov random fields. While these generalizations are useful at times, their additional flexibility can dramatically increase the computational complexity of many algorithms. In some cases, exact calculations are intractable. Here we'll discuss one small extension of HMMs that can improve their ability to model correlations between emissions while still employing the same efficient algorithms.\n",
     "\n",
-    "In normal HMMs, the emission distribution depends only on the current state. Autoregressive HMMs (ARHMMs) make one small tweak to this structure by making the emission distribution depend on the current state **and** the previous emission. Graphically, if an HMM is represented by the typical lattice diagram shown below where boxes, circles, and arrows represent states, emissions, and probabilistic dependencies, respectively, then an ARHMM is equivalent to drawing an arrow from the previous state to the current one.\n",
+    "In normal HMMs, the emission distributions depend only on the current state. Autoregressive HMMs (ARHMMs) make one small tweak to this structure by making the emission distributions depend on the current state **and** the previous emission. Graphically, if an HMM is represented by the typical lattice diagram shown below where boxes, circles, and arrows represent states, emissions, and probabilistic dependencies, respectively, then an ARHMM is equivalent to drawing an arrow from the previous state to the current one.\n",
     "\n",
     "AR(1) binomial example"
    ]
