Made None default argument of random state in random variable classes

--- a/tutorials/arhmm_intro.ipynb
+++ b/tutorials/arhmm_intro.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "The first difference is in the arguments of the methods of the emission distributions. Since they depend on the previous emission, we'll need to make some minor adjustments to the SciPy conventions. Unfortunately, this also means we can't directly use SciPy random variables, so we'll have to make a custom class. Although SciPy random variables implement many methods, the `ARHMM` class only uses the `rvs` and `pdf` or `pmf` methods, so we only need to supply those. Since the distributions also need to remember their parameters, we'll create a class that directly returns a \"frozen\" random variable.\n",
     "\n",
-    "Additionally, the `rvs` method must accept a `random_state` argument that is in turn used to generate the random variate. This allows the `ARHMM` class to create reproducible simulations if needed. In this case, since we're using the SciPy `norm` object, we can simply pass the random_state to its `rvs` method and not worry about it anymore. Under the hood, however, the `ARHMM` passes in a NumPy `np.random.Generator` instance, so implementations which explicitly generate the random variate must use this object as their source of randomness."
+    "Additionally, the `rvs` method must accept a `random_state` argument that is in turn used to generate the random variate. This allows the `ARHMM` class to create reproducible simulations if needed. In this case, since we're using the SciPy `norm` object, we can simply pass the random_state to its `rvs` method and not worry about it anymore. Under the hood, however, the `ARHMM` passes in a NumPy `np.random.Generator` instance, so implementations which explicitly generate the random variate must use this object as their source of randomness. It's also convenient to give the `random_state` a default value of `None`, which is also the default for the corresponding SciPy methods."
    ]
   },
   {
@@ -105,7 +105,7 @@
     "        self.mu = mu\n",
     "        self.sigma = sigma\n",
     "    \n",
-    "    def rvs(self, x, random_state):\n",
+    "    def rvs(self, x, random_state=None):\n",
     "        d = self.mu - self.sigma ** 2 / 2\n",
     "        s = self.sigma * stats.norm.rvs(random_state=random_state)\n",
     "        return x * np.exp(d + s)\n",
@@ -209,7 +209,7 @@
     "    def __init__(self, c):\n",
     "        self.c = c\n",
     "    \n",
-    "    def rvs(self, random_state):\n",
+    "    def rvs(self, random_state=None):\n",
     "        return self.c\n",
     "    \n",
     "    def pdf(self, x):\n",
@@ -491,7 +491,7 @@
     "            pmf[i, j] = sum(terms)\n",
     "        self._pmf = pmf\n",
     "        \n",
-    "    def rvs(self, x, random_state):\n",
+    "    def rvs(self, x, random_state=None):\n",
     "        i = x  # Renamed for consistency with derivation\n",
     "        js = np.arange(n+1)\n",
     "        ps = self._pmf[i]\n",
