Mostly tried to make use of I and we consistent and varied stock transition phrases

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "### 1.2 Training, formally\n",
     "\n",
-    "Now that we understand what training is intuitively, let's briefly talk about how it's defined mathematically. This section will mainly serve to introduce some terminology that I'll use throughout this tutorial, but it will also highlight the features that are common to all optimization problems regardless of application or mathematical form.\n",
+    "Now that we understand what training is intuitively, let's briefly talk about how it's defined mathematically. This section will mainly serve to introduce some terminology that we'll use throughout this tutorial, but it will also highlight the features that are common to all optimization problems regardless of application or mathematical form.\n",
     "\n",
     "At the core of every optimization problem is a function whose output is optimized with respect to one or more inputs. This is called the *objective function* or simply the *objective*. This terminology is common when discussing optimization generically, and the kind of extremum (minimum or maximum) is unstated. In machine learning and statistics, however, the objective is often framed as a kind of distance between the model's output and the actual data. Distance has a very specific meaning in mathematics, so we instead call this quantity *loss*. Naturally, then, the goal is to minimize loss. Unlike in many optimization problems where the optimal value of the objective is as important as the inputs that achieve that optimum, when fitting models the loss is often only a means to an end. Though the loss has applications when comparing the fits of different models, the optimized parameters are typically the ultimate goal.\n",
     "\n",
@@ -230,7 +230,7 @@
    "id": "34fc08fb",
    "metadata": {},
    "source": [
-    "Now let's create our HMM. Since the purpose of this tutorial is to illustrate training techniques rather than motivate the applications of HMMs with relevant examples, we'll arbitrarily label the states with numbers and the emissions with letters."
+    "Let's create our HMM. Since the purpose of this tutorial is to illustrate training techniques rather than motivate the applications of HMMs with relevant examples, we'll arbitrarily label the states with numbers and the emissions with letters."
    ]
   },
   {
@@ -270,7 +270,7 @@
    "id": "9dfbc1d7",
    "metadata": {},
    "source": [
-    "Let's now generate 10 examples each with length 200. The simulations are generated as a single sequence of (state, emission) pairs. However, since in the theory section we defined separate state and emission sequences, we'll do a bit of Python magic to put the data in this form."
+    "We'll now generate 10 examples each with length 200. The simulations are generated as a single sequence of (state, emission) pairs. However, since in the theory section we defined separate state and emission sequences, we'll do a bit of Python magic to put the data in this form."
    ]
   },
   {
@@ -464,7 +464,7 @@
    "source": [
     "Again the estimates are very close!\n",
     "\n",
-    "Let's finish this out with the start distribution. The overall idea is exactly the same, except now we're working with a single distribution rather than a dictionary of distributions. Technically, we can only estimate the start distribution from the initial state of each example. Since this severely limits the amount of data relative to the transitions, it may be tempting to use the state counts over all time points instead. However, this quantity will estimate the equilibrium distribution of the underlying Markov process, which is a function of the transition probabilities and independent from the start distribution. However, there may be data-specific reasons to think these quantities are equal, so this is again an example of a model selection decision."
+    "We'll finish this out with the start distribution. The overall idea is exactly the same, except now we're working with a single distribution rather than a dictionary of distributions. Technically, we can only estimate the start distribution from the initial state of each example. Since this severely limits the amount of data relative to the transitions, it may be tempting to use the state counts over all time points instead. However, this quantity will estimate the equilibrium distribution of the underlying Markov process, which is a function of the transition probabilities and independent from the start distribution. However, there may be data-specific reasons to think these quantities are equal, so this is again an example of a model selection decision."
    ]
   },
   {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a3985dd",
+   "id": "bc396862",
    "metadata": {},
    "source": [
     "The posterior decoding curves are effectively identical. There are, of course, some minor differences but no real patterns that I can see. Generally these models are good at detecting the time steps corresponding to state 1 but much worse at distinguishing between states 2 and 3. We can understand this qualitatively by examining the original model parameters. State 1 is highly \"sticky\" and only emits As, so long runs of As are extremely likely to correspond to state 1. State 3 only emits Bs, but it's fairly likely to switch to state 2. Since state 2 is equally likely to emit an A as a B, it's difficult to know if a B was emitted because the model remained in state 3 or because it switched to state 2. This shows that state inference can be highly variable even if the parameters are known exactly.\n",
@@ -622,7 +622,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "To find the MLE for $\\lambda$, we 1) take the derivative relative to $\\lambda$ and 2) solve for $\\lambda$ when this expression is zero. In the second step, we're solving for specific values where the derivative is zero, so I'll replace $\\lambda$ with $\\hat{\\lambda}$ to clarify this distinction.\n",
+    "To find the MLE for $\\lambda$, we 1) take the derivative relative to $\\lambda$ and 2) solve for $\\lambda$ when this expression is zero. In the second step, we're solving for specific values where the derivative is zero, so we'll replace $\\lambda$ with $\\hat{\\lambda}$ to clarify this distinction.\n",
     "\n",
     "**Step 1**\n",
     "$$\n",
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2aa98a1",
+   "id": "56279eda",
    "metadata": {},
    "source": [
     "The estimate for each state's $\\lambda$ is simply the average of the emissions associated with that state. However, the emissions are separated across multiple examples and not organized by state, so we'll first gather them in a dictionary keyed by state and then take the average."
@@ -986,7 +986,7 @@
     "\n",
     "In the context of HMMs, this procedure is known as the Baum-Welch algorithm, but it's a special case of a more general technique called estimation-maximization (EM). Though it intuitively makes sense, it's not at all clear that it will work in practice. For example, the likelihood function could ping-pong up and down without ever settling down to a single value. Fortunately, each iteration is guaranteed to improve the likelihood. Unfortunately, the sequence may converge to a local rather than a global maximum (a good answer but not necessarily the best). Thus, it's common to run the algorithm multiple times with different initial parameters and choose the final parameters with the largest likelihood.\n",
     "\n",
-    "Hopefully this discussion has given you conceptual overview of the Baum-Welch algorithm. Clearly I've skipped many details, so in the next section we'll implement it from scratch for categorical distributions. Then in the following sections, I'll introduce the EM algorithm formally and use it to derive the update equations for a normal distribution.\n",
+    "Hopefully this discussion has given you conceptual overview of the Baum-Welch algorithm. Clearly we've skipped many details, so in the next section we'll implement it from scratch for categorical distributions. Then in the following sections, we'll introduce the EM algorithm formally and use it to derive the update equations for a normal distribution.\n",
     "\n",
     "### 3.2 Implementing Baum-Welch for categorical distributions\n",
     "\n",
@@ -1057,7 +1057,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "With these results, we can implement the Baum-Welch algorithm. I'll use the same example from the MLE section, so we can compare the performance of the two methods."
+    "With these results, we can implement the Baum-Welch algorithm. We'll use the same example from the MLE section, so we can compare the performance of the two methods."
    ]
   },
   {
@@ -1086,7 +1086,7 @@
    "id": "4f7cc030",
    "metadata": {},
    "source": [
-    "To start the algorithm, we first need a model structure and then initial estimates for its parameters. To keep things comparable with the previous example, I'll assume we know the disallowed transitions but not the disallowed emissions. Though I'll use uniform random values for the initial pseudocounts to keep the code simple, you may want to use specific distributions for each. Additionally, while it's good practice to use the best result from several different random initializations, if you choose to hard code the initial parameters, you must ensure the states are different from each other in some way. If the states are all identical, there's no way for the model to \"break symmetry,\" and all the updates will yield parameters that are the same as the initial ones."
+    "To start the algorithm, we first need a model structure and then initial estimates for its parameters. To keep things comparable with the previous example, we'll assume we know the disallowed transitions but not the disallowed emissions. Though I'll use uniform random values for the initial pseudocounts to keep the code simple, you may want to use specific distributions for each. Additionally, while it's good practice to use the best result from several different random initializations, if you choose to hard code the initial parameters, you must ensure the states are different from each other in some way. If the states are all identical, there's no way for the model to \"break symmetry,\" and all the updates will yield parameters that are the same as the initial ones."
    ]
   },
   {
@@ -1684,7 +1684,7 @@
     "\n",
     "### 3.4 Deriving the update equations for a normal distribution\n",
     "\n",
-    "We'll now apply this theory to the HMM context. First I'll show not only that $Q(\\theta|\\theta_n)$ is tractible to calculate but also that it decomposes into independent terms. Then I'll show how to derive the update equations for normal emission distributions. Let's get started!\n",
+    "We'll now apply this theory to the HMM context. First we'll show not only that $Q(\\theta|\\theta_n)$ is tractible to calculate but also that it decomposes into independent terms. Then we'll show how to derive the update equations for normal emission distributions. Let's get started!\n",
     "\n",
     "Let's expand the expression for $Q(\\theta|\\theta_n)$ using the probabilistic structure of an HMM.\n",
     "$$\n",
@@ -1722,7 +1722,7 @@
     "\n",
     "Though moving the sum over all state sequences outside the logarithm seemed like a minor mathematical detail, it, in combination with the probabilistic structure of an HMM, makes its computation tractible. Another consequence is that if the transitions and emissions are all governed by different parameters, we can maximize the entire expression by optimizing the corresponding sum for each state or pair of states individually. You can even see that the fractional \"counts\" $P(X_t=i|Y=y, \\theta)$ and $P(X_t=i, X_{t+1}=j|Y=y)$ that we defined in the previous section are the coefficients of the log-likelihood terms, which is directly related to their appearance in the update equations.\n",
     "\n",
-    "Now that I've demonstrated that each term can be optimized separately, I'll show the derivation of the update equations for a normal emission distribution. Recall that the density function of a normal distribution with mean $\\mu$ and variance $\\sigma^2$ is given by\n",
+    "Now that we've demonstrated that each term can be optimized separately, we'll show the derivation of the update equations for a normal emission distribution. Recall that the density function of a normal distribution with mean $\\mu$ and variance $\\sigma^2$ is given by\n",
     "\n",
     "$$\n",
     "f(x, \\mu, \\sigma^2) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}} e^{-\\frac{\\left( x-\\mu \\right)^2}{2\\sigma^2}}\n",
@@ -1734,7 +1734,7 @@
     "q(\\theta) = \\sum_{t=1}^T P(X_t=i|Y=y, \\theta_n) \\log P(Y_t=y_t|X_t=i, \\theta)\n",
     "$$\n",
     "\n",
-    "I'll write $w_{it} = P(X_t=i|Y=y, \\theta_n)$ to simplify the notation and to emphasize this quantity is fixed during the maximization step. Now let's insert the expression for the normal density with mean $\\mu_i$ and variance $\\sigma_i^2$\n",
+    "We'll write $w_{it} = P(X_t=i|Y=y, \\theta_n)$ to simplify the notation and to emphasize this quantity is fixed during the maximization step. Now let's insert the expression for the normal density with mean $\\mu_i$ and variance $\\sigma_i^2$\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
