Fixed typo in hmm_training
Implement vs implemented in discrete emission example with known labels

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -740,7 +740,7 @@
    "id": "0d0e2478",
    "metadata": {},
    "source": [
-    "Though the raw parameter estimates are convenient for inspection, discrete emission distributions over an infinite domain are implement as SciPy random variables in Homomorph."
+    "Though the raw parameter estimates are convenient for inspection, discrete emission distributions over an infinite domain are implemented as SciPy random variables in Homomorph."
    ]
   },
   {
