Cleaned up formatting of LaTeX, punctuated equations as sentences, rephrased some awkward wording

--- a/tutorials/arhmm_intro.ipynb
+++ b/tutorials/arhmm_intro.ipynb
@@ -52,15 +52,17 @@
     "\n",
     "### 2.2 Geometric Brownian motion\n",
     "\n",
-    "The conventional \"multiplicative\" model of stock prices is called geometric Brownian motion and is defined by the following stochastic differential equation:\n",
+    "The conventional \"multiplicative\" model of stock prices is called geometric Brownian motion and is defined by the following stochastic differential equation\n",
     "\n",
-    "$$ dX_t = \\mu X_t dt + \\sigma X_t dB_t, $$\n",
+    "$$\n",
+    "dX_t = \\mu X_t dt + \\sigma X_t dB_t\n",
+    "$$\n",
     "\n",
     "where $X_t$ is the stochastic process, $\\mu$ is the drift, $\\sigma$ is the volatility, and $B_t$ is a standard Brownian motion. The drift and volatility are constants which parametrize the average growth or decay of the process and its variation, respectively.\n",
     "\n",
     "Don't worry too much about the exact meaning of this equation. Stochastic differential equations are an advanced topic often only covered in graduate probability courses. The important take-away for us is the value of the process changes according to both a deterministic and stochastic part. The deterministic part is proportional to $\\mu$ and the current value of the process. The stochastic part is proportional to $\\sigma$, the current value of the process, and a standard Brownian differential $dB_t$. Roughly speaking, a standard Brownian differential is a like small step sampled from a normal distribution, which is actually how we'll simulate it later.\n",
     "\n",
-    "The previous equation has the following analytic solution:\n",
+    "The previous equation has the following analytic solution\n",
     "\n",
     "$$\n",
     "X_t = X_0 \\exp \\left(\n",
@@ -75,7 +77,7 @@
     "X_{t+1} = X_t \\exp \\left(\n",
     "                         \\mu - \\frac{\\sigma^2}{2}\n",
     "                         + \\sigma B_1\n",
-    "                   \\right)\n",
+    "                   \\right).\n",
     "$$\n",
     "\n",
     "Using various properties of a standard Brownian motion, we can expand this recursive definition into the original solution, so the two forms are equivalent. Finally, we also need a expression for its pdf for some later calculations, which I'll also provide without proof:\n",
@@ -88,7 +90,7 @@
     "                        - (\\mu - \\frac{1}{2} \\sigma^2)t\n",
     "                  \\right)^2}\n",
     "                 {2 \\sigma^2 t}\n",
-    "     \\right)}\n",
+    "     \\right)}.\n",
     "$$\n",
     "\n",
     "### 2.3 Instantiating the model\n",
@@ -133,41 +135,41 @@
    "source": [
     "To create the random variables for each state, we need to set their parameters. We can do this arbitrarily, but it's actually somewhat tricky to choose them so the resulting sample paths look like plausible stock prices. The problem is $\\mu$ and $\\sigma$ are not direct measures of intuitive quantities like annual growth or the coefficient of variation. Fortunately, with a small amount of work we can relate them.\n",
     "\n",
-    "Let's quickly review the equations for the expected value and variance of $X_t$ since we'll need them for our derivations.\n",
+    "Let's quickly review the equations for the expected value and variance of $X_t$ since we'll need them for our derivations:\n",
     "\n",
     "$$\n",
     "E(X_t) = X_0 e^{\\mu t} \\\\\n",
-    "Var(X_t) = X_0^2e^{2 \\mu t} \\left(e^{\\sigma^2 t} - 1 \\right)\n",
+    "Var(X_t) = X_0^2e^{2 \\mu t} \\left(e^{\\sigma^2 t} - 1 \\right). \\\\\n",
     "$$\n",
     "\n",
-    "A nice measure for the growth of an investment is the average annual growth rate (AAGR), which we can easily relate to $\\mu$ from the equation for expected value.\n",
+    "A nice measure for the growth of an investment is the average annual growth rate (AAGR), which we can easily relate to $\\mu$ from the equation for expected value:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "E(X_{365}) &= X_0 e^{365 \\mu} \\\\\n",
     "\\log \\left( \\frac{E(X_{365})}{X_0} \\right) &= 365 \\mu \\\\\n",
-    "\\frac{\\log \\left( AAGR \\right)}{365} &= \\mu\n",
+    "\\frac{\\log \\left( AAGR \\right)}{365} &= \\mu. \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "The variance is harder to think about since it's expressed in square units. A more intuitive quantity is the coefficient of variation (CV), which is the ratio of the standard deviation to the mean. We'll begin with deriving an equation for CV.\n",
+    "The variance is harder to think about since it's expressed in square units. A more intuitive quantity is the coefficient of variation (CV), which is the ratio of the standard deviation to the mean. We'll begin with deriving an equation for CV:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "CV(X_t) &= \\frac{\\sqrt{Var(X_t)}}{E(X_t)} \\\\\n",
     "&= \\frac{\\sqrt{X_0^2e^{2 \\mu t} \\left(e^{\\sigma^2 t} - 1 \\right)}}\n",
     "        {X_0 e^{\\mu t}} \\\\\n",
-    "&= \\sqrt{e^{\\sigma^2 t} - 1 }\n",
+    "&= \\sqrt{e^{\\sigma^2 t} - 1 }. \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Now let's re-arrange this equation to express $\\sigma$ in terms of the CV after one year.\n",
+    "Now let's re-arrange this equation to express $\\sigma$ in terms of the CV after one year:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "CV(X_{365}) &= \\sqrt{e^{365 \\sigma^2} - 1 } \\\\\n",
     "CV(X_{365})^2 + 1 &= e^{365 \\sigma^2} \\\\\n",
-    "\\sqrt{\\frac{\\log{CV(X_{365})^2 + 1}}{365}} &= \\sigma\n",
+    "\\sqrt{\\frac{\\log{CV(X_{365})^2 + 1}}{365}} &= \\sigma. \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -422,7 +424,7 @@
     "\n",
     "### 3.1 The rules of the game\n",
     "\n",
-    "I found this next example while working with count data that was constrained by a maximum value. I won't try to provide any more context or motivation since my particular use case was so esoteric that explaining it would only confuse the topic, and any other situation I could think up would be hopelessly artificial. The key point is the measurements were counting the number of elements in a set of a fixed size that had some property, a kind of data often modeled as a binomial random variable. I had reason to believe these counts had a certain amount of \"momentum\" and would be better described by an autoregressive model. Fortunately, autoregressive binomial models are described in various sources, but the formula for its pmf seemed to come out of nowhere until I came across this explanation. One of the reasons I like this example is its illustration of two points common in statistical modeling. First, it's not always immediately obvious how to construct a model with certain properties. Second, sometimes these unintuitive modeling problems have elegant solutions!\n",
+    "This next example concerns number of elements in a set of a fixed size that had some property, a kind of data often modeled as a binomial random variable. However, sometimes these counts have a certain amount of \"momentum\" and would be better described by an autoregressive model. For example, if we're counting students who are out sick in a class, the number tomorrow will likely depend on the number today because people generally take a few days to feel better. Fortunately, autoregressive binomial models are described in various sources, but the formula for its pmf seemed to come out of nowhere until I came across this explanation. One of the reasons I like this example is its illustration of two points common in statistical modeling. First, it's not always immediately obvious how to construct a model with certain properties. Second, sometimes these unintuitive modeling problems have elegant solutions!\n",
     "\n",
     "Enough introduction! Let's describe the coin flipping game. Imagine we have two biased coins, two corresponding cups, and a set of $n$ tokens. To start the game, we first randomly partition the tokens into the two cups by whatever rule we like. Each round is then played by flipping the two coins one time for each token in their respective cups. If the coin is heads, the token stays in that cup. If it's tails, it moves to the other cup.\n",
     "\n",
@@ -430,9 +432,11 @@
     "\n",
     "### 3.2 Deriving the pmf\n",
     "\n",
-    "To do any calculations with this model, we need an expression for its pmf. First, though, since we're dealing with some kind of combination of binomial random variables, let's review the expression for their pmfs. If $X$ counts the number of \"successes\" out of $n$ trials where each trial has a probability $p$ of succeeding, then the probability of $i$ successes is given by:\n",
+    "To do any calculations with this model, we need an expression for its pmf. First, though, since we're dealing with some kind of combination of binomial random variables, let's review the expression for their pmfs. If $X$ counts the number of \"successes\" out of $n$ trials where each trial has a probability $p$ of succeeding, then the probability of $i$ successes is given by\n",
     "\n",
-    "$$ P(X = i) = {n \\choose i} p^i(1-p)^{n-i} $$\n",
+    "$$\n",
+    "P(X = i) = {n \\choose i} p^i(1-p)^{n-i}.\n",
+    "$$\n",
     "\n",
     "At this point, reality departs somewhat from our coin flipping game. If we were actually observing this game, we could easily count of the number of heads flipped with each coin and calculate the probability of each with the above formula. The probability of the entire round is then just the product of these two numbers.\n",
     "\n",
@@ -440,12 +444,12 @@
     "\n",
     "In our case, let's call the number of tokens in the cup of interest at a time step $t$ as $X_t$. If there were previously $i$ tokens in the cup, we want to know the probability there will be $j$ tokens in the cup at the end of the current round. This is expressed mathematically as $P(X_t = j | X_{t-1} = i)$.\n",
     "\n",
-    "Now let's assume $c$ heads came up when we flip for the cup of interest. This means that $j - c$ heads came up when we flipped for the other cup since the two must sum to $j$. This is now just a case of calculating the probability of the flips for the other cup since everything else is given! To formalize this a little more, let's designate the number of heads for the cup of interest as a new random variable $C_0$ and the same quantity for the other cup as $C_1$. We'll also let $p_0$ and $p_1$ be the probabilities of success for the respective coins as well. Writing the previous discussion mathematically yields:\n",
+    "Now let's assume $c$ heads came up when we flip for the cup of interest. This means that $j - c$ heads came up when we flipped for the other cup since the two must sum to $j$. This is now just a case of calculating the probability of the flips for the other cup since everything else is given! To formalize this a little more, let's designate the number of heads for the cup of interest as a new random variable $C_0$ and the same quantity for the other cup as $C_1$. We'll also let $p_0$ and $p_1$ be the probabilities of success for the respective coins as well. Writing the previous discussion mathematically yields\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "P(X_t = j | X_{t-1} = i, C_0 = c) &= P(C_1 = j-c) \\\\\n",
-    "&= {{n-i} \\choose {j-c}} p_1^{j-c}(1-p_1)^{n-i-j+c}\n",
+    "&= {{n-i} \\choose {j-c}} p_1^{j-c}(1-p_1)^{n-i-j+c}. \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -455,7 +459,7 @@
     "P(X = x | Y = y) = \\sum_z P(X = x | Y = y, Z = z)P(Z = z)\n",
     "$$\n",
     "\n",
-    "Applying this to our equation yields:\n",
+    "Applying this to our equation yields\n",
     "\n",
     "$$\n",
     "P(X_t = j | X_{t-1} = i) = \\sum_c\n",
