--- a/tutorials/hmm_intro.ipynb
+++ b/tutorials/hmm_intro.ipynb
@@ -26,7 +26,7 @@
     "The states are often unknown or \"hidden,\" and we instead observe a value associated with each state called an *emission*. Together these emissions form a separate, parallel sequence, $Y$. An emission depends only on the current state, which is expressed mathematically as\n",
     "\n",
     "$$\n",
-    "P(Y_t = y_t | X = x) = P(Y_t = y_t | X_t = x_t)\n",
+    "P(Y_t = y_t | X = x) = P(Y_t = y_t | X_t = x_t).\n",
     "$$\n",
     "\n",
     "In effect, each state has an associated emission distribution, so at each time step we use the distribution of the current state to sample an emission. These emissions are typically all of the same type or unit, so we can't immediately distinguish the state from the emissions alone.\n",
@@ -314,7 +314,7 @@
    "id": "763c8135",
    "metadata": {},
    "source": [
-    "Wow! The HMM's explanation of the data is nearly 900 times more likely than that of the fair coin's. To get technical, this quantity is called a likelihood ratio. Under certain conditions these ratios follow known distributions, so they form the basis of many statistical tests. However, in this case the ratio is so extreme that I don't think we need any more math to tell us something is up with this casino.\n",
+    "Wow! The HMM's explanation of the data is nearly 900 times more likely than that of the fair coin's. To get technical, this quantity is called a likelihood ratio. Under certain conditions these ratios follow known distributions, so they form the basis of many statistical tests. However, in this case the ratio is so extreme that we don't need any more math to tell us something is up with this casino.\n",
     "\n",
     "#### 2.1.4 State inference (Viterbi algorithm)\n",
     "\n",
@@ -652,7 +652,7 @@
    "source": [
     "#### 2.2.4 Comments on random variable style instantiation\n",
     "\n",
-    "Currently, mixing the dictionary and random variable styles is disallowed to simplify handling the arguments. Besides, it would be an extremely rare use case since it implies the existence of states with very different kinds of emissions (a fixed set of choices vs discrete or continuous values). If this is not the case, please let me know, and I can brainstorm a solution!\n",
+    "Currently, mixing the dictionary and random variable styles is disallowed to simplify handling the arguments. Besides, it would be an extremely rare use case since it implies the existence of states with very different kinds of emissions (a fixed set of choices vs discrete or continuous values). If this is not the case, please don't hesitate to reach out!\n",
     "\n",
     "Although this example involves continuous emissions, the random variable style is also useful or even necessary for certain kinds of discrete emissions. For example, some types of count measurements, like the number of patrons at a restaurant per day, are not theoretically capped at a maximum value (even if practical concerns dictate otherwise). Since it's impossible to manually specify a probability for each non-negative integer, parametrizing the model with a properly defined distribution, *e.g.* Poisson or negative binomial, is the more appropriate solution.\n",
     "\n",
