Added links to references

--- a/tutorials/hmm_intro.ipynb
+++ b/tutorials/hmm_intro.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "### 1.2 A formal definition\n",
     "\n",
-    "With the informal introduction out of the way, let's now give some definitions. The notation as well as some of the subsequent examples are adapted from Durbin's *Biological Sequence Analysis*. It's an excellent resource on HMMs, so please refer to it for a more detailed presentation on theory and applications.\n",
+    "With the informal introduction out of the way, let's now give some definitions. The notation as well as some of the subsequent examples are adapted from the book *[Biological Sequence Analysis](https://doi.org/10.1017/CBO9780511790492)*. It's an excellent resource on HMMs, so please refer to it for a more detailed presentation on theory and applications.\n",
     "\n",
     "At the core of an HMM is a Markov chain. Markov chains model the evolution of system over a set of *states* (often in discrete time steps) with the constraint that the probability of moving to next state only depends on the current state. This Markov property dramatically simplifies calculations and allows the efficient algorithms described later. It is,  however, in many cases a gross simplification. The temperature tomorrow depends on more than the temperature today, for example. Despite this, HMMs are still sufficiently flexible to model a variety of phenomena.\n",
     "\n",
