--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -25,8 +25,11 @@
     "  - [3.3 Estimation-maximization, formally](#3.3-Estimation-maximization,-formally)\n",
     "  - [3.4 Deriving the update equations for a normal distribution](#3.4-Deriving-the-update-equations-for-a-normal-distribution)\n",
     "- [4 Discriminative training](#4-Discriminative-training)\n",
+    "- [5 Conclusion](#5-Conclusion)\n",
     "\n",
-    "We have a lot of ground to cover, so let's get started!\n",
+    "The material in sections two and three owes a heavy debt to two sources, respectively. The first is the book *[Biological Sequence Analysis](https://doi.org/10.1017/CBO9780511790492)*, which is an excellent resource on HMMs and other probabilistic models. The second is the paper [Hidden Neural Networks](https://doi.org/10.1162/089976699300016764) by Anders Krogh and Søren Riism. Many of the theoretical results for HMMs shown here are adapted or expanded from the proofs outlined in those references, so this tutorial wouldn't have been possible without them.\n",
+    "\n",
+    "Anyway, we have a lot of ground to cover, so let's get started!\n",
     "\n",
     "## 1 What is training?\n",
     "\n",
@@ -1800,7 +1803,7 @@
     "\n",
     "## 4 Discriminative training\n",
     "\n",
-    "Discriminative training is technically under the heading of training with known states since it requires labeled data. However, there are enough differences in the objective function and the optimization algorithm that it deserves its own section. The material in the theory section is adapted from Hidden Neural Networks. *Neural Comput* 1999; 11 (2): 541–563.\n",
+    "In this next section, we cover discriminative training, which is sometimes called conditional maximum likelihood (CML) estimation. Technically discriminative training methods fall under the heading of training with known states since they require labeled data. However, there are enough differences in the objective function and the optimization algorithm that it deserves its own treatment. As before, the material is largely divided between a section that motivates the problem and develops the theory and a section that translates that theory into code. \n",
     "\n",
     "### 4.1 Discriminative training theory\n",
     "\n",
@@ -1810,14 +1813,6 @@
     "\n",
     "Some complex, real-world data with discriminative training"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae4e3af7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
